deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/deewhyweb/http-mtls.git
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"http-mtls-git:latest","namespace":"outside-mesh"},"fieldPath":"spec.template.spec.containers[?(@.name==\"http-mtls-git\")].image","pause":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2020-10-29T18:08:43Z"
  generation: 2
  labels:
    app: http-mtls-git
    app.kubernetes.io/component: http-mtls-git
    app.kubernetes.io/instance: http-mtls-git
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: http-mtls-git-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "12"
  name: http-mtls-git
  namespace: outside-mesh
  resourceVersion: "952212"
  selfLink: /apis/apps/v1/namespaces/outside-mesh/deployments/http-mtls-git
  uid: 2eb134c4-67ef-407d-8dfb-486f6ecbe1cb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: http-mtls-git
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: http-mtls-git
        deploymentconfig: http-mtls-git
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/outside-mesh/http-mtls-git@sha256:ed76016800b5a1791cab3a22fa12ed64f14c967f860fe8808b35c027fe2cd6b8
        imagePullPolicy: Always
        name: http-mtls-git
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          # name must match the volume name below
          - name: test-certs
            mountPath: /certs/server
            readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: test-certs
        secret:
          secretName: test-certs
