2-serviceEntry.yml

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
  namespace: istio-system
spec:
  hosts:
  - t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
  - dev-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
  - qa-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  exportTo:
  - "*"
