3-virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tls-through-egress-gateway
  namespace: istio-system
spec:
  hosts:
  - t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
  - dev-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
  - qa-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
  gateways:
  - mesh
  - istio-egressgateway
  http:
  - match:
    - gateways:
      - mesh
      port: 80
      sourceLabels: 
        app: sleep
      sourceNamespace: fs-mesh-dev
      sniHosts:
      - t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: tls-outside-mesh
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - dev-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
    route:
    - destination:
        host: dev-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
        port:
          number: 443
      weight: 100
  - match:
    - gateways:
      - mesh
      port: 80
      sourceLabels: 
        app: sleep-qa
      sourceNamespace: fs-mesh-qa
      sniHosts:
      - qa-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: tls-outside-mesh-qa
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - qa-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
    route:
    - destination:
        host: qa-t-test.apps.cluster-fiserv-71cc.fiserv-71cc.example.opentlc.com
        port:
          number: 443
      weight: 100
