4-sidecar.yml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: fs-mesh-dev
spec:
  egress:
  - hosts:
    - "./*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sleep
  namespace: fs-mesh-dev
spec:
  workloadSelector:
    labels:
      app: sleep
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
